ui alignment fix maindashboard,job, candidate, reference request , reports

--- a/src/styles/AiReferenceStyles/AiReferenceCandidates.css
+++ b/src/styles/AiReferenceStyles/AiReferenceCandidates.css
@@ -29,12 +29,13 @@
   background: var(--primary-color);
   border: none;
   color: var(--font-white);
-  font-size: 1.25rem; /* Use rem for scalability */
   border-radius: 50px;
   /* width: 300px; */
-  padding: 5px 25px 5px 15px; /* Increased padding for better touch targets */
+  padding: 5px 20px; /* Increased padding for better touch targets */
   cursor: pointer; /* Change cursor to pointer */
   transition: background-color 0.3s; /* Smooth transition */
+  margin-right: 10px;
+
 }
 .btn-create-new-candidate:hover {
   background: darkorange; /* Darker shade on hover */
